# AltType

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
data/: alt-codes.json
src/: main.cpp
